# LogicAndAlgoLab3

./: graph.py  main.py  mainLists.py  mainMatrix.py  otchet.docx  task1.py  task2.py  task3.py
C_Graphs/: CMakeLists.txt  main.c
C_Graphs/lists/: lists.h  listsGraph.h
C_Graphs/matrix/: matrix.c  matrix.h  mtrxgrph.c  mtrxgrph.h
C_Graphs/matrix/operations/: remvrtx.c  remvrtx.h
graphs/: listGraph.py  matrixGraph.py
tasks/: task2.py  task3.py
tools/: listsGrphTools.py  mtrxGrphTools.py
